Filter feature added
